Finished Tokyo sans pictures

--- a/css/creative.css
+++ b/css/creative.css
@@ -47,13 +47,13 @@ p {
 }
 .bg-dark {
   background-color: #222222;
-  color: white;
+  color: white; /*header color*/
 }
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 aside {
   padding: 50px 0;
