--- a/css/creative.css
+++ b/css/creative.css
@@ -50,7 +50,7 @@ p {
   color: white; /*header color*/
 }
 .text-faded {
-  color: rgba(255, 255, 255, 0.7);
+  /*color: rgba(255, 255, 255, 0.7);*/
 }
 section {
   padding: 50px 0;
@@ -234,7 +234,7 @@ header .header-content .header-content-inner p {
   color: white;
   opacity: 0;
   display: block;
-  /*background: rgba(240, 95, 64, 0.9);*/
+  background: rgba(100, 100, 100, 0.5);
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -275,7 +275,7 @@ header .header-content .header-content-inner p {
     font-size: 16px;
   }
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-size: 22px;
+    font-size: 30px;
   }
 }
 .call-to-action h2 {
@@ -423,6 +423,10 @@ body {
 span#disclaimer:hover {
   opacity: 0.5;
 }
+header background-image .opaque100{
+  opacity: 1;
+}
+
 /* for rotating pictures that are landscape */
 .carousel-inner .item .rotate90 {
     -webkit-transform: rotate(90deg);
