--- a/styles.css
+++ b/styles.css
@@ -74,4 +74,18 @@ label:hover {
 
 .visible {
     display: block;
+
+}
+
+* {
+    font-family: Arial;
+}
+
+body {
+    padding: 25px 50px 50px 50px;
+}
+
+.accordion-button {
+    color: #444;
+    background-color: #eee;
 }
